arma-rs/tests/derive/fail_struct_map_transparent_default.stderr
error: #[arma(transparent)] and #[arma(default)] cannot be used together
 --> tests/derive/fail_struct_map_transparent_default.rs:4:8
  |
4 | #[arma(transparent, default)]
  |        ^^^^^^^^^^^

error: #[arma(transparent)] and #[arma(default)] cannot be used together
  --> tests/derive/fail_struct_map_transparent_default.rs:10:8
   |
10 | #[arma(transparent)]
   |        ^^^^^^^^^^^
