arma-rs/tests/derive/fail_struct_map_transparent_default.rs
use arma_rs_proc::FromArma;

#[derive(FromArma)]
#[arma(transparent, default)]
struct Container {
    first: String,
}

#[derive(FromArma)]
#[arma(transparent)]
struct Field {
    #[arma(default)]
    first: String,
}

fn main() {}
